--- a/cxs/ci/Jenkinsfile
+++ b/cxs/ci/Jenkinsfile
@@ -144,9 +144,9 @@ def createNpmDeb(app){
     stage ('Create Npm Deb') {
       app.inside {
         // TODO make this a version number from the script somehow.
-        sh 'python ci/scripts/create_npm_deb.py wrappers/node/cxs-*.tgz'
+        sh 'python ci/scripts/create_npm_deb.py wrappers/node/cxs-*.gz'
         sh 'ls'
-        archiveArtifacts allowEmptyArchive: true, artifacts: 'cxs/node*.deb'
+        archiveArtifacts allowEmptyArchive: true, artifacts: 'cxs/cxs*.deb'
       }
     }
   }
