--- a/cxs/ci/Jenkinsfile
+++ b/cxs/ci/Jenkinsfile
@@ -104,12 +104,12 @@ def createDeb(envn) {
   stage('Build libcxs Debian and compress .so file') {
       envn.inside {
         SCRIPT = 'cxs/ci/scripts/gzip_so_file.py'
-        SO_FILE = 'cxs/libcxs/target/debug/libcxs.so'
+        SO_FILE = 'cxs/libcxs/target/debug/libcxs.so.*'
         DEST = 'cxs'
         sh 'cd cxs/libcxs/; cargo deb --no-build'
         archiveArtifacts allowEmptyARchive: true, artifacts: "cxs/libcxs/target/debian/libcxs_*_amd64.deb"
         sh "python ${SCRIPT} ${SO_FILE} ${DEST}"
-        archiveArtifacts allowEmptyARchive: true, artifacts: "cxs/libcxs/target/debug/libcxs.so.*.gz"
+        archiveArtifacts allowEmptyARchive: true, artifacts: "cxs/libcxs.so.*.gz"
       }
   }
 }
@@ -144,6 +144,7 @@ def createNpmDeb(app){
     stage ('Create Npm Deb') {
       app.inside {
         // TODO make this a version number from the script somehow.
+        sh 'ls'
         sh 'python ci/scripts/create_npm_deb.py wrappers/node/cxs-*.tgz'
         sh 'ls'
         archiveArtifacts allowEmptyArchive: true, artifacts: 'cxs*.deb'
