--- a/cxs/wrappers/node/package.json
+++ b/cxs/wrappers/node/package.json
@@ -25,8 +25,10 @@
     "@types/node": "^8.0.47",
     "@types/ref": "0.0.28",
     "@types/ref-struct": "0.0.28",
+    "change-case": "^3.0.1",
     "ffi": "^2.2.0",
     "fs-extra": "^4.0.2",
+    "lodash": "^4.17.4",
     "path": "^0.12.7",
     "ref": "^1.3.5",
     "ref-struct": "^1.1.0",
