--- a/cxs/wrappers/node/package.json
+++ b/cxs/wrappers/node/package.json
@@ -1,13 +1,13 @@
 {
     "description": "Node wrapper for cxs", 
     "license": "ISC", 
-    "typings": "dist/index.d.ts", 
+    "author": "evernym", 
     "directories": {
         "test": "test", 
         "build": "dist", 
         "lib": "src"
     }, 
-    "author": "evernym", 
+    "typings": "dist/index.d.ts", 
     "bugs": {
         "url": "https://github.com/evernym/cxs/issues"
     }, 
@@ -20,18 +20,18 @@
         "url": "git+https://github.com/evernym/cxs.git", 
         "type": "git"
     }, 
-    "version": "0.1.543416+469b25d", 
+    "version": "0.1.2690962-64b6ad8", 
     "dependencies": {
-        "@types/node": "^8.0.47", 
+        "ref-struct": "^1.1.0", 
+        "lodash": "^4.17.4", 
         "weak": "^1.0.1", 
         "fs-extra": "^4.0.2", 
         "@types/ref-struct": "0.0.28", 
-        "@types/ffi": "0.0.19",
-        "change-case": "^3.0.1", 
+        "@types/ffi": "0.0.19", 
         "ffi": "^2.2.0", 
-        "lodash": "^4.17.4",
         "path": "^0.12.7", 
-        "ref-struct": "^1.1.0", 
+        "@types/node": "^8.0.47", 
+        "change-case": "^3.0.1", 
         "@types/ref": "0.0.28", 
         "ref": "^1.3.5"
     }, 
