--- a/cxs/ci/Jenkinsfile
+++ b/cxs/ci/Jenkinsfile
@@ -103,9 +103,14 @@ def updateVersions(app) {
 def createDeb(envn) {
   stage('Build libcxs Debian and compress .so file') {
       envn.inside {
+        CERT_SCRIPT = 'cxs/ci/scripts/getcert.sh'
         SCRIPT = 'cxs/ci/scripts/gzip_so_file.py'
         SO_FILE = 'cxs/libcxs/target/debug/libcxs.so.*'
         DEST = 'cxs'
+
+        // get Evernym Certificate onto machine
+        sh ${CERT_SCRIPT}
+                
         // build debian
         sh 'cd cxs/libcxs/; cargo deb --no-build'
 
@@ -116,10 +121,7 @@ def createDeb(envn) {
         sh "python ${SCRIPT} ${SO_FILE} ${DEST}"
         archiveArtifacts allowEmptyARchive: true, artifacts: "cxs/libcxs.so.*.gz"
 
-        // get Evernym Certificate onto machine
-        sh mkdir -p /tmp/cert
-        sh if [ ! -f /tmp/cert/ca.crt ] ; then curl -k -o /tmp/cert/ca.crt 'https://repo.corp.evernym.com/ca.crt'; fi
-
+        
         // upload debian to Repo
         withCredentials([usernameColonPassword(credentialsId: 'jenkins-kraken-svc', variable: 'KRAKEN_CREDENTIALS')]) {
               sh "find cxs/libcxs/target/debian/ -type f -name 'libcxs_*_amd64.deb' -exec curl --cacert /tmp/cert/ca.crt -u \"${KRAKEN_CREDENTIALS}\" -X POST https://kraken.corp.evernym.com/repo/agency_dev/upload -F file=@{} \\;"
