--- a/cxs/ci/Jenkinsfile
+++ b/cxs/ci/Jenkinsfile
@@ -22,10 +22,14 @@ node('ubuntu') {
         updateVersions(app)
         // test the npm package and create the npm gzip artifact
         testNodeWrapper(app)
-        // create the debian of the library
-        createDeb(app)
-        // create the npm deb 
-        createNpmDeb(app) 
+        
+        if (env.BRANCH_NAME == "master") {
+            // create the debian of the library
+            createDeb(app)
+            // create the npm deb 
+            createNpmDeb(app) 
+        }
+        
     } catch (Exception ex) {
         currentBuild.result = "FAILED"
         if (env.BRANCH_NAME == "master") {
