--- a/cxs/ci/Jenkinsfile
+++ b/cxs/ci/Jenkinsfile
@@ -10,6 +10,8 @@ def build(name, file = 'cxs/ci/ubuntu.dockerfile cxs/ci', customParams = '') {
     return docker.build("$name-test", "--build-arg uid=${getUserUid()} -f $file")
 }
 
+
+
 node('ubuntu') {
     try {
         stage ('Checkout'){
@@ -17,18 +19,18 @@ node('ubuntu') {
         }
         app = buildDocker()
         // build the so file and test the so file
-        buildRust(app)
-        // update the versions in the toml file and package.json
-        updateVersions(app)
-        // test the npm package and create the npm gzip artifact
-        testNodeWrapper(app)
-        
-        if (env.BRANCH_NAME == "master") {
-            // create the debian of the library
-            createDeb(app)
-            // create the npm deb 
-            createNpmDeb(app) 
-        }
+        // buildRust(app)
+        // // update the versions in the toml file and package.json
+        // updateVersions(app)
+        // // test the npm package and create the npm gzip artifact
+        // testNodeWrapper(app)
+        create_debian()
+        // if (env.BRANCH_NAME == "master") {
+        //     // create the debian of the library
+        //     createDeb(app)
+        //     // create the npm deb 
+        //     createNpmDeb(app) 
+        // }
         
     } catch (Exception ex) {
         currentBuild.result = "FAILED"
@@ -40,7 +42,9 @@ node('ubuntu') {
         step([$class: 'WsCleanup'])
     }
 }
-
+def create_debian(){
+    sh 'cxs/ci/create_debian.sh'
+}
 def buildDocker(){
     def app
     def pathToCi = 'cxs/ci'
@@ -117,17 +121,18 @@ def createDeb(envn) {
                 
             // build debian
             sh 'cd cxs/libcxs/; cargo deb --no-build'
+            if (env.BRANCH_NAME == "master") {
+                // archive debian to Jenkins
+                archiveArtifacts allowEmptyARchive: true, artifacts: "cxs/libcxs/target/debian/libcxs_*_amd64.deb"
 
-            // archive debian to Jenkins
-            archiveArtifacts allowEmptyARchive: true, artifacts: "cxs/libcxs/target/debian/libcxs_*_amd64.deb"
+                // archive .so file to Jenkins
+                sh "python ${SCRIPT} ${FILES} ${DEST}"
+                archiveArtifacts allowEmptyARchive: true, artifacts: DEST
 
-            // archive .so file to Jenkins
-            sh "python ${SCRIPT} ${FILES} ${DEST}"
-            archiveArtifacts allowEmptyARchive: true, artifacts: DEST
-
-            // upload debian to Repo
-            withCredentials([usernameColonPassword(credentialsId: 'jenkins-kraken-svc', variable: 'KRAKEN_CREDENTIALS')]) {
-                sh "find cxs/libcxs/target/debian/ -type f -name 'libcxs_*_amd64.deb' -exec curl --cacert /tmp/cert/ca.crt -u \"${KRAKEN_CREDENTIALS}\" -X POST https://kraken.corp.evernym.com/repo/agency_dev/upload -F file=@{} \\;"
+                // upload debian to Repo
+                withCredentials([usernameColonPassword(credentialsId: 'jenkins-kraken-svc', variable: 'KRAKEN_CREDENTIALS')]) {
+                    sh "find cxs/libcxs/target/debian/ -type f -name 'libcxs_*_amd64.deb' -exec curl --cacert /tmp/cert/ca.crt -u \"${KRAKEN_CREDENTIALS}\" -X POST https://kraken.corp.evernym.com/repo/agency_dev/upload -F file=@{} \\;"
+                }
             }
         }
     }
