--- a/cxs/ci/Jenkinsfile
+++ b/cxs/ci/Jenkinsfile
@@ -7,8 +7,10 @@ def getUserUid() {
 }
 
 def build(name, file = 'cxs/ci/ubuntu.dockerfile cxs/ci', customParams = '') {
-    return docker.build("$name-test", "--build-arg uid=${getUserUid()} -f $file")
+    return docker.build("$name-test", "-v artifact1:/artifact1 --build-arg uid=${getUserUid()} -f $file")
 }
+
+
 
 node('ubuntu') {
     try {
@@ -16,13 +18,13 @@ node('ubuntu') {
             checkout scm
         }
         app = buildDocker()
+       
         // build the so file and test the so file
         buildRust(app)
         // update the versions in the toml file and package.json
         updateVersions(app)
         // test the npm package and create the npm gzip artifact
         testNodeWrapper(app)
-        
         if (env.BRANCH_NAME == "master") {
             // create the debian of the library
             createDeb(app)
@@ -40,7 +42,9 @@ node('ubuntu') {
         step([$class: 'WsCleanup'])
     }
 }
-
+def create_debian(){
+    sh 'cxs/ci/create_debian.sh'
+}
 def buildDocker(){
     def app
     def pathToCi = 'cxs/ci'
@@ -117,17 +121,22 @@ def createDeb(envn) {
                 
             // build debian
             sh 'cd cxs/libcxs/; cargo deb --no-build'
+            
+            // cp the debian to the volume. We will then use it to test the node wrapper
 
-            // archive debian to Jenkins
-            archiveArtifacts allowEmptyARchive: true, artifacts: "cxs/libcxs/target/debian/libcxs_*_amd64.deb"
 
-            // archive .so file to Jenkins
-            sh "python ${SCRIPT} ${FILES} ${DEST}"
-            archiveArtifacts allowEmptyARchive: true, artifacts: DEST
+            if (env.BRANCH_NAME == "master") {
+                // archive debian to Jenkins
+                archiveArtifacts allowEmptyARchive: true, artifacts: "cxs/libcxs/target/debian/libcxs_*_amd64.deb"
 
-            // upload debian to Repo
-            withCredentials([usernameColonPassword(credentialsId: 'jenkins-kraken-svc', variable: 'KRAKEN_CREDENTIALS')]) {
-                sh "find cxs/libcxs/target/debian/ -type f -name 'libcxs_*_amd64.deb' -exec curl --cacert /tmp/cert/ca.crt -u \"${KRAKEN_CREDENTIALS}\" -X POST https://kraken.corp.evernym.com/repo/agency_dev/upload -F file=@{} \\;"
+                // archive .so file to Jenkins
+                sh "python ${SCRIPT} ${FILES} ${DEST}"
+                archiveArtifacts allowEmptyARchive: true, artifacts: DEST
+
+                // upload debian to Repo
+                withCredentials([usernameColonPassword(credentialsId: 'jenkins-kraken-svc', variable: 'KRAKEN_CREDENTIALS')]) {
+                    sh "find cxs/libcxs/target/debian/ -type f -name 'libcxs_*_amd64.deb' -exec curl --cacert /tmp/cert/ca.crt -u \"${KRAKEN_CREDENTIALS}\" -X POST https://kraken.corp.evernym.com/repo/agency_dev/upload -F file=@{} \\;"
+                }
             }
         }
     }
@@ -140,6 +149,8 @@ def testNodeWrapper(envn) {
     stage ('Test Node Wrapper'){
       envn.inside {
         sh 'ls -l lib'
+        // because we need the dependency
+        sh 'cp lib/libcxs.so /usr/lib'
         sh 'npm -v'
         sh 'npm install'
         sh 'npm rebuild'
