--- a/cxs/ci/Jenkinsfile
+++ b/cxs/ci/Jenkinsfile
@@ -153,7 +153,7 @@ def testNodeWrapper(envn) {
       envn.inside {
         sh 'ls -l lib'
         // because we need the dependency
-        sh 'cp lib/libcxs.so /usr/lib'
+        sh 'sudo cp lib/libcxs.so /usr/lib'
         sh 'npm -v'
         sh 'npm install'
         sh 'npm rebuild'
