--- a/cxs/ci/Jenkinsfile
+++ b/cxs/ci/Jenkinsfile
@@ -10,16 +10,12 @@ def build(name, file = 'cxs/ci/ubuntu.dockerfile cxs/ci', customParams = '') {
     return docker.build("$name-test", "--build-arg uid=${getUserUid()} -f $file")
 }
 
-def build_test_wrapper(name, file = 'cxs/ci/Dockerfile-test-wrapper cxs/ci') {
-    return docker.build("$name-test-wrapper", "--build-arg uid=${getUserUid()} -f $file")
-}
-
 node('ubuntu') {
     try {
         stage ('Checkout'){
             checkout scm
         }
-        app = buildDocker('libcxs')
+        app = build('libcxs')
         test_wrapper = build_test_wrapper('libcxs')
        
         // build the so file and test the so file
