--- a/cxs/ci/Jenkinsfile
+++ b/cxs/ci/Jenkinsfile
@@ -11,7 +11,7 @@ def build(name, file = 'cxs/ci/ubuntu.dockerfile cxs/ci', customParams = '') {
 }
 
 def build_wrapper_testing_image(file = 'cxs/ci/Dockerfile-wrapper-testing', customParams = ''){
-	return docker.build("Wrapper-test", "--build-arg uid=${getUserUid()} -f $file")
+	return docker.build("wrapper-test", "--build-arg uid=${getUserUid()} -f $file")
 }
 
 node('sdk') {
@@ -27,7 +27,7 @@ node('sdk') {
         // update the versions in the toml file and package.json
         updateVersions(app)
         // test the npm package and create the npm gzip artifact
-        testNodeWrapper(wrapper))
+        testNodeWrapper(wrapper)
         if (env.BRANCH_NAME == "master") {
             // create the debian of the library
             createDeb(app)
