--- a/cxs/ci/Jenkinsfile
+++ b/cxs/ci/Jenkinsfile
@@ -152,7 +152,7 @@ def createDeb(envn) {
 def testNodeWrapper(envn) {
   dir ('cxs/wrappers/node'){
     stage ('Test Node Wrapper'){
-		withDockerContainer('wrapper-test', '-u docker'){
+		withDockerContainer(image:'wrapper-test', args:'-u docker'){
 //        	sh 'ls -l lib'
 	        // because we need the dependency
 			sh 'whoami'
