--- a/cxs/ci/Dockerfile-wrapper-testing
+++ b/cxs/ci/Dockerfile-wrapper-testing
@@ -46,9 +46,7 @@ RUN curl -fsOSL $LIBINDY_DOWNLOAD_URL \
     && dpkg -i $LIBINDY_DEB \
     && apt-get -f install
 
-RUN useradd -m 1001 && echo "docker:docker" | chpasswd && adduser docker sudo
-USER docker
-WORKDIR /
+COPY ../libcxs/target/debug/libcxs.so /usr/lib/libcxs.so
 
 
 
