--- a/cxs/ci/Jenkinsfile
+++ b/cxs/ci/Jenkinsfile
@@ -22,13 +22,14 @@ node('sdk') {
             checkout scm
         }
         app = build('libcxs')
-		wrapper = build_wrapper_testing_image()
+		
        
         // build the so file and test the so file
-//        buildRust(app)
+        buildRust(app)
         // update the versions in the toml file and package.json
 //        updateVersions(app)
         // test the npm package and create the npm gzip artifact
+        wrapper = build_wrapper_testing_image()
         testNodeWrapper(wrapper)
         if (env.BRANCH_NAME == "master") {
             // create the debian of the library
