--- a/cxs/ci/Jenkinsfile
+++ b/cxs/ci/Jenkinsfile
@@ -152,25 +152,23 @@ def createDeb(envn) {
 
 // Creates the tgz file that can be 'npm install'-ed.
 def testNodeWrapper(envn) {
-  dir ('cxs/wrappers/node'){
-    stage ('Test Node Wrapper'){
-		withDockerContainer(image:'wrapper-test'){
-//        	sh 'ls -l lib'
-	        // because we need the dependency
-			sh 'npm -v'
-	        sh 'npm install'
-	        sh 'npm rebuild'
-	        sh 'npm run lint'
-	        sh 'npm run compile'
-	        sh 'npm test'
-	        sh 'ls -l'
-			sh 'npm pack'
-	        sh 'ls'
-	        sh "test -f cxs-*.tgz"
-	        archiveArtifacts allowEmptyArchive: true, artifacts: '**/*.tgz'
-      	}
+    dir ('cxs/wrappers/node'){
+        stage ('Test Node Wrapper'){
+		    envn.inside {
+    			sh 'npm -v'
+	            sh 'npm install'
+	            sh 'npm rebuild'
+	            sh 'npm run lint'
+	            sh 'npm run compile'
+	            sh 'npm test'
+	            sh 'ls -l'
+			    sh 'npm pack'
+	            sh 'ls'
+	            sh "test -f cxs-*.tgz"
+	            archiveArtifacts allowEmptyArchive: true, artifacts: '**/*.tgz'
+      	    }
+        }
     }
-  }
 }
 
 
