--- a/cxs/ci/Jenkinsfile
+++ b/cxs/ci/Jenkinsfile
@@ -8,12 +8,12 @@ def getUserUid() {
 
 // docker build -t libcxs-test --build-arg uid=1001 -f cxs/ci/ubuntu.dockerfile cxs/ci
 def build(name, file='cxs/ci/ubuntu.dockerfile', context='cxs/ci', customParams = '') {
-    return docker.build("$name-test", "--build-arg uid=${getUserUid()} -f ${file} ${context}")
+    return docker.build("$name-test", "--build-arg uid=${getUserUid()} -f $file $context")
 }
 
 // docker build -t wrapper-test --build-arg uid=1001 -f cxs/ci/Dockerfile-wrapper-testing
 def build_wrapper_testing_image(file='cxs/ci/Dockerfile-wrapper-testing', context='cxs', customParams = ''){
-	return docker.build("wrapper-test", "--build-arg uid=${getUserUid()} -f ${file} ${context}")
+	return docker.build("wrapper-test", "--build-arg uid=${getUserUid()} -f $file $context")
 }
 
 node('sdk') {
@@ -21,14 +21,14 @@ node('sdk') {
         stage ('Checkout'){
             checkout scm
         }
-        app = build('libcxs', file='cxs/ci/ubuntu.dockerfile', context='cxs/ci')
+        app = build('libcxs', 'cxs/ci/ubuntu.dockerfile', 'cxs/ci')
 		      
         // build the so file and test the so file
         buildRust(app)
         // update the versions in the toml file and package.json
 //        updateVersions(app)
         // test the npm package and create the npm gzip artifact
-        wrapper = build_wrapper_testing_image(file='cxs/ci/Dockerfile-wrapper-testing', context='cxs')
+        wrapper = build_wrapper_testing_image('cxs/ci/Dockerfile-wrapper-testing', 'cxs')
         testNodeWrapper(wrapper)
         if (env.BRANCH_NAME == "master") {
             // create the debian of the library
