--- a/cxs/ci/Jenkinsfile
+++ b/cxs/ci/Jenkinsfile
@@ -134,7 +134,7 @@ def createDeb(envn) {
             sh "${CERT_SCRIPT}"
                 
             // build debian
-            sh 'cd cxs/libcxs/; cargo deb --no-build --color never'
+            sh 'cd cxs/libcxs/; cargo deb --no-build'
     
 
             if (env.BRANCH_NAME == "master") {
