--- a/cxs/ci/Jenkinsfile
+++ b/cxs/ci/Jenkinsfile
@@ -30,6 +30,9 @@ node('ubuntu') {
         // build and test the so file
         buildRust(app)
 
+	// test rust
+	testRust(app)
+
         // update the so file to have version
         updateSo(app)
         // test the npm package and create the npm gzip artifact
