--- a/vcx/wrappers/python3/ci/Dockerfile-python-wrapper
+++ b/vcx/wrappers/python3/ci/Dockerfile-python-wrapper
@@ -14,5 +14,5 @@ COPY wrappers/python3/ /python3
 
 WORKDIR /python3
 
-CMD [ "/usr/bin/python3", "-m", "pytest"]
+CMD [ "/usr/bin/python3", "-m", "pytest", "-v"]
 
