--- a/vcx/wrappers/python3/ci/Dockerfile-python-wrapper
+++ b/vcx/wrappers/python3/ci/Dockerfile-python-wrapper
@@ -12,7 +12,7 @@ ENV PYTHONPATH=$PYTHONPATH:/python3
 COPY libvcx/target/debug/libvcx.so /usr/lib
 COPY wrappers/python3/ /python3
 
-WORKDIR /python3
+WORKDIR /python3/tests
 
 CMD [ "/usr/bin/python3", "-m", "pytest", "-v"]
 
