--- a/vcx/ci/Jenkinsfile
+++ b/vcx/ci/Jenkinsfile
@@ -1,72 +1,73 @@
 #!groovy
 
+def TESTING = true
+def NODETYPE = 'ubuntu'
+if TESTING {
+	NODETYPE  = 'sdk'
+}
+
 def dockerfile= 'dockerfile'
 
 def getUserUid() {
     return sh(returnStdout: true, script: 'id -u').trim()
 }
 
-// docker build -t libvcx-test --build-arg uid=1001 -f vcx/ci/ubuntu.dockerfile vcx/ci
-def build(name, file='vcx/ci/ubuntu.dockerfile', context='vcx/ci', customParams = '') {
-    return docker.build("$name-test", "--build-arg uid=${getUserUid()} -f $file $context")
+def build(name, file, context='.', customParams = '') {
+    return docker.build("$name", "${customParams} --build-arg uid=${getUserUid()} -f $file $context")
 }
 
-// docker build -t wrapper-test --build-arg uid=1001 -f vcx/ci/Dockerfile-wrapper-testing
-def build_wrapper_testing_image(file='vcx/ci/Dockerfile-wrapper-testing', context='vcx', customParams = ''){
-	return docker.build("wrapper-test", "--no-cache --build-arg uid=${getUserUid()} -f $file $context")
-}
+// def build_wrapper_testing_image(file='vcx/ci/Dockerfile-wrapper-testing', context='vcx', customParams = '--no-cache'){
+// 	return docker.build("wrapper-test", "${customParams} --build-arg uid=${getUserUid()} -f $file $context")
+// }
 
-def build_libindy_image(){
-    dir ('vcx') {
-        return docker.build("libindy", "--build-arg uid=${getUserUid()} -f wrappers/python3/ci/Dockerfile .")
-    }
-}
+// def build_libindy_image(){
+//     dir ('vcx') {
+//         return docker.build("libindy", "--build-arg uid=${getUserUid()} -f wrappers/python3/ci/Dockerfile .")
+//     }
+// }
 
-def build_python_image(){
-    dir ('vcx') {
-		sh 'ls'
-		sh 'ls libvcx'
-		sh 'ls libvcx/target'
-		sh 'ls libvcx/target/debug'
-        return docker.build("python", "--build-arg uid${getUserUid()} -f wrappers/python3/ci/Dockerfile-python-wrapper .")
-    }
-}
+// def build_python_image(){
+//     dir ('vcx') {
+//         return docker.build("python", "--no-cache --build-arg uid${getUserUid()} -f wrappers/python3/ci/Dockerfile-python-wrapper .")
+//     }
+// }
 
-//node('ubuntu') {
-node('sdk') {
+node(NODETYPE) {
     try {
         stage ('Checkout'){
             checkout scm
         }
-        
-        app = build('libvcx', 'vcx/ci/ubuntu.dockerfile', 'vcx/ci')
-        libindy = build_libindy_image()
+        sh 'cd vcx'
+        libindy = build('libindy', 'ci/Dockerfile-libindy', '.')
+        rust = build('rust', 'ci/ubuntu.dockerfile', '.')
 		
         // update the versions in the toml file and package.json
-        updateVersions(app)      
+        updateVersions(rust)      
         
         // build and test the so file
-        buildRust(app)
-
+        buildRust(rust)
 
 	    // test rust
-	    testRust(app)
+	    testRust(rust)
 
         // update the so file to have version
-        updateSo(app)
+        updateSo(rust)
+
         // test the npm package and create the npm gzip artifact
-        wrapper = build_wrapper_testing_image('vcx/ci/Dockerfile-wrapper-testing', 'vcx')
-		// test python wrapper
+        nodejs = build('nodejs', 'wrappers/node/ci/Dockerfile-nodejs', '.')
+        vcx-nodejs = build('vcx-nodejs', 'wrappers/node/ci/Dockerfile-nodejs-wrapper', '.')
+		vcx-python = build('vcx-python', 'wrappers/python/ci/Dockerfile-python-wrapper', '.')
+        
+        // test python wrapper
 		// this image must be built after the libvcx.so is built
-        python = build_python_image()
         testPythonWrapper(python)
         testNodeWrapper(wrapper)
 
         if (env.BRANCH_NAME == "master") {
             // create the debian of the library
-            createDeb(app)
+            createDeb(rust)
             // create the npm deb 
-            createNpmDeb(app) 
+            createNpmDeb(rust) 
         }
         
     } catch (Exception ex) {
@@ -192,21 +193,10 @@ def createDeb(envn) {
 
 // Creates the tgz file that can be 'npm install'-ed.
 def testNodeWrapper(envn) {
-    dir ('vcx/wrappers/node'){
-        stage ('Test Node Wrapper'){
-		    envn.inside {
-    			sh 'npm -v'
-	            sh 'npm install'
-	            sh 'npm rebuild'
-	            sh 'npm run lint'
-	            sh 'npm run compile'
-	            sh 'npm test'
-	            sh 'ls -l'
-			    sh 'npm pack'
-	            sh 'ls'
-	            sh "test -f vcx-*.tgz"
-	            archiveArtifacts allowEmptyArchive: true, artifacts: '**/*.tgz'
-      	    }
+    stage ('Test Node Wrapper'){
+	    envn.inside {
+            sh 'ci/test_wrapper.sh'
+            archiveArtifacts allowEmptyArchive: true, artifacts: '**/*.tgz'
         }
     }
 }
