--- a/vcx/ci/Jenkinsfile
+++ b/vcx/ci/Jenkinsfile
@@ -27,7 +27,7 @@ def build(name, file, context='.', customParams = '') {
 // }
 
 
-node('ubuntu') {
+node('sdk') {
 
     try {
         stage ('Checkout'){
