--- a/vcx/ci/Jenkinsfile
+++ b/vcx/ci/Jenkinsfile
@@ -191,7 +191,7 @@ def createDeb(envn) {
 // Creates the tgz file that can be 'npm install'-ed.
 def testNodeWrapper(envn) {
     stage ('Test Node Wrapper'){
-        dir('vcx/wrappers/node')
+        dir('vcx/wrappers/node'){
             envn.inside() {
                 sh 'npm install typescript-compiler'
                 sh 'npm install'
@@ -204,7 +204,6 @@ def testNodeWrapper(envn) {
                 archiveArtifacts allowEmptyArchive: true, artifacts: '**/*.tgz'
             }
         }
-    
     }
 }
 
