--- a/vcx/wrappers/node/ci/Dockerfile-nodejs-wrapper
+++ b/vcx/wrappers/node/ci/Dockerfile-nodejs-wrapper
@@ -3,7 +3,7 @@ FROM nodejs
 ARG uid=1001
 # Assumes we are in the ./vcx directory
 RUN npm install typescript-compiler
-COPY libvcx/target/debug/libvcx.so /usr/lib
+# COPY libvcx/target/debug/libvcx.so /usr/lib
 
 
 
