--- a/vcx/wrappers/node/ci/Dockerfile-nodejs-wrapper
+++ b/vcx/wrappers/node/ci/Dockerfile-nodejs-wrapper
@@ -3,7 +3,7 @@ FROM nodejs
 ARG uid=1000
 # Assumes we are in the ./vcx directory
 RUN npm install typescript-compiler
-# COPY libvcx/target/debug/libvcx.so /usr/lib
+COPY libvcx/target/debug/libvcx.so /usr/lib
 RUN useradd -ms /bin/bash -u $uid vcx
 USER vcx
 
