--- a/vcx/ci/Jenkinsfile
+++ b/vcx/ci/Jenkinsfile
@@ -105,8 +105,7 @@ def buildRust(envn){
             sh "ls -l"
             sh "rustc --version"
             sh "gcc --version"
-            // sh "cd vcx/libvcx; cargo test -- --test-threads=1"
-            sh "cd vcx/libvcx; cargo build --features ci"
+            sh "cd vcx/libvcx; cargo build --features ci --color=never"
         }
     }
 }
@@ -115,7 +114,7 @@ def testRust(envn) {
     stage ('Testing Rust'){
         sh "echo Testing"
         envn.inside {
-            sh "cd vcx/libvcx; cargo test --color never -- --test-threads=1"
+            sh "cd vcx/libvcx; cargo test --color=never -- --test-threads=1"
         }
     }
 }
@@ -168,7 +167,7 @@ def createDeb(envn) {
             sh "${CERT_SCRIPT}"
                 
             // build debian
-            sh 'cd vcx/libvcx/; cargo deb --no-build'
+            sh 'cd vcx/libvcx/; cargo deb --no-build --color=never'
     
 
             if (env.BRANCH_NAME == "master") {
