--- a/vcx/ci/Jenkinsfile
+++ b/vcx/ci/Jenkinsfile
@@ -18,6 +18,9 @@ node('ubuntu-04') {
         }
         libindy = build('libindy', 'vcx/ci/Dockerfile-libindy', 'vcx')
         rust = build('rust', 'vcx/ci/ubuntu.dockerfile', 'vcx')
+
+        // attempt to fix crossbeam compilation failure on ubuntu-04
+        sh 'cargo clean'
 		
         // update the versions in the toml file and package.json
         updateVersions(rust)      
